<resources>
    <string name="app_name">Список покупок</string>
    <string name="notification_ticker">Список покупок</string>
    <string name="next">Далее</string>
    <string name="cancel">Отмена</string>
    <string name="title">Название</string>
    <string name="title_hint">Введите название</string>
    <string name="search_hint">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="category">Категория</string>
    <string name="count">Количество</string>
    <string name="cost">Цена</string>
    <string name="note">Примечание</string>
    <string name="unit">Единица измерения</string>
    <string name="not_selected_m">Не выбран</string>
    <string name="not_selected_w">Не выбрана</string>
    <string name="not_selected_s">Не выбрано</string>
    <string name="is_removed">Удалено</string>
    <string name="shop">Магазин</string>
    <string name="reminder">Напоминание</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="delete">Удалить</string>
    <string name="saving_changes">Сохранение изменений</string>
    <string name="not_save">Не сохранять</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="deleting">Удаление</string>
    <string name="deleting_message">Вы действительно хотите удалить этот список?</string>
    <string name="no_products">Ещё нет ни одного товара</string>
    <string name="edit_list_activity_title">Редактирование списка</string>
    <string name="list_activity_title">Список</string>
    <string name="edit_item_activity_title">Редактирование товара</string>
    <string name="shops">Магазины</string>
    <string name="map">Карта</string>
    <string name="add_shop_activity_title">Магазины</string>
    <string name="sorting">Сортировка</string>
    <string name="font_medium">sans-serif</string>
    <string name="alphabetizing">По алфавиту</string>
    <string name="sorting_by_category">По категориям</string>
    <string name="sorting_as_you_add">По мере добавления</string>
    <string name="list">Список</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="new_list">Новый список</string>
    <string name="spent">Потрачено:</string>
    <string name="left">Осталось:</string>
    <string name="without_category">Без категории</string>
    <string name="lists">Списки</string>
    <string name="patterns">Шаблоны</string>
    <string name="products">Товары</string>
    <string name="categories">Категории</string>
    <string name="trash">Корзина</string>
    <string name="restore">Восстановить</string>
    <string name="is_restore">Восстановлен</string>
    <string name="no_lists">Ещё нет ни одного списка</string>
    <string name="empty_cart">Корзина пуста</string>
    <string name="edit">Изменить</string>
    <string name="deleting_message_category">Вы уверены, что хотите удалить?\n\nВсе товары этой категории будут без категории.</string>
    <string name="editing_category">Редактирование категории</string>
    <string name="no_categories">Ещё нет ни одной категории</string>
    <string name="new_category">Новая категория</string>
    <string name="location_dialog_title">Включить геолокацию?</string>
    <string name="location_dialog_message">Включите геолокацию для нахождения магазинов поблизости.</string>
    <string name="deleting_message_product">Вы действительно хотите удалить этот товар?</string>
    <string name="want_add_this_product">Вы хотите добавить этот элемент?</string>
    <string name="add_product_activity">Новый товар</string>
    <string name="add">Создать</string>
    <string name="do_you_want_save_changes">Вы хотите сохранить изменения?</string>
    <string name="products_activity_title">Категория</string>
</resources>
