<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        style="@style/MainLayout">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <EditText
                android:hint="@string/title"
                style="@style/EditText"
                android:textSize="26sp"
                android:id="@+id/etTitle"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/EditTextLabel"
            android:text="@string/shop"/>

        <TextView
            android:id="@+id/tvShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Магнит"
            android:clickable="true"
            android:focusable="true"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:textSize="16sp"
            style="@android:style/Widget.Material.Spinner.Underlined"
            android:layout_marginBottom="5dp"/>

        <TextView
            style="@style/EditTextLabel"
            android:text="@string/reminder"
            android:visibility="gone"/>

        <LinearLayout
            style="@style/AutoHeight"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tvDate"
                style="@android:style/Widget.Material.Spinner.Underlined"
                android:layout_marginEnd="8dp"
                android:text="@string/date"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tvTime"
                style="@android:style/Widget.Material.Spinner.Underlined"
                android:layout_marginStart="8dp"
                android:text="@string/time"/>
        </LinearLayout>

        <LinearLayout
            style="@style/AutoHeight"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="156dp"
                style="@style/Button"
                android:text="@string/save"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#D93030"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/delete"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>