<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.EditItemActivity"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="0dp"
                app:expandedTitleTextAppearance="@style/Widget.AppCompat.ActionBar.TabText"
                app:layout_scrollFlags="scroll|enterAlways"
                app:statusBarScrim="@color/colorAccent">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_collapseMode="none"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="none"
                app:elevation="0dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="30dp"
                    android:paddingEnd="16dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColorHint="#FFFFFF"
                        android:nextFocusRight="@+id/etCount"
                        app:hintTextAppearance="@style/Widget.Design.TextInputLayout">

                        <EditText
                            android:hint="@string/title"
                            android:textSize="26sp"
                            android:paddingBottom="9dp"
                            style="@style/EditText"
                            android:textColor="#FFFFFF"
                            android:textColorHint="#FFFFFF"
                            android:textColorHighlight="#FFFFFF"
                            android:textColorLink="#FFFFFF"
                            android:id="@+id/etTitle"
                            android:textCursorDrawable="@drawable/cursor_white"
                            android:background="@drawable/search_edittext_background"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            style="@style/AutoHeight"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">
            <TextView
                style="@style/EditTextLabel"
                android:text="@string/category"/>
            <Spinner
                android:id="@+id/spinnerCategory"
                style="@style/Spinner"
                android:layout_marginBottom="15dp"
                android:spinnerMode="dialog"/>

            <LinearLayout
                style="@style/AutoHeight">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginEnd="30dp"
                    android:id="@+id/outerLayoutCount">

                    <TextView
                        style="@style/EditTextLabel"
                        android:text="@string/count"/>

                    <LinearLayout
                        android:id="@+id/layoutCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <ImageButton
                            android:id="@+id/btnMinus"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:src="@drawable/minus"
                            android:background="#00000000"
                            tools:ignore="ContentDescription" />

                        <EditText
                            android:id="@+id/etCount"
                            style="@style/EditText"
                            android:layout_width="60dp"
                            android:gravity="center"
                            android:digits="0123456789"
                            android:inputType="number"
                            android:textSize="15sp"
                            tools:text="1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            tools:ignore="LabelFor"
                            android:nextFocusRight="@+id/etCost"/>

                        <ImageButton
                            android:id="@+id/btnPlus"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:src="@drawable/plus"
                            android:background="#00000000"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/EditTextLabel"
                        android:text="@string/unit"/>
                    <Spinner
                        android:id="@+id/spinnerUnit"
                        style="@style/Spinner"
                        android:layout_width="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:hint="@string/cost"
                    style="@style/EditText"
                    android:digits="0123456789."
                    android:inputType="numberDecimal"
                    android:id="@+id/etCost"
                    android:nextFocusRight="@+id/etNote"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:hint="@string/note"
                    style="@style/EditText"
                    android:minHeight="110dp"
                    android:gravity="top"
                    android:id="@+id/etNote"
                    android:inputType="textCapSentences|textMultiLine"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>